--- a/homework/notebook-1.ipynb
+++ b/homework/notebook-1.ipynb
@@ -27,15 +27,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_train_test_split(x, y):\n",
+    "def make_train_test_split(x, y, test_size=0.25, random_state=123456):\n",
     "\n",
     "    from sklearn.model_selection import train_test_split\n",
     "\n",
     "    (x_train, x_test, y_train, y_test) = train_test_split(\n",
     "        x,\n",
     "        y,\n",
-    "        test_size=0.25,\n",
-    "        random_state=123456,\n",
+    "        test_size=test_size,\n",
+    "        random_state=random_state,\n",
     "    )\n",
     "    return x_train, x_test, y_train, y_test"
    ]
@@ -123,7 +123,6 @@
     "        return None\n",
     "    with open(\"estimator.pickle\", \"rb\") as file:\n",
     "        estimator = pickle.load(file)\n",
-    "\n",
     "    return estimator"
    ]
   },
@@ -228,7 +227,7 @@
       "                                                  ['Origin'])])),\n",
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
-      "                             score_func=<function f_regression at 0x00000213B5BE1C60>)),\n",
+      "                             score_func=<function f_regression at 0x000002795B701BC0>)),\n",
       "                ('estimator', LinearRegression())]):\n",
       "  MSE: 11.177256954645403\n",
       "  MAE: 2.524517976430189\n",
@@ -240,27 +239,19 @@
     "def check_estimator():\n",
     "\n",
     "    import pickle\n",
-    "\n",
     "    import pandas as pd\n",
     "    from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "\n",
     "    data, target = load_data()\n",
-    "\n",
     "    x_train, x_test, y_train_true, y_test_true = make_train_test_split(\n",
     "        x=data,\n",
     "        y=target,\n",
     "    )\n",
-    "\n",
     "    estimator = load_estimator()\n",
-    "\n",
     "    mse, mae, r2 = eval_metrics(\n",
     "        y_test_true,\n",
     "        estimator.predict(x_test),\n",
     "    )\n",
-    "\n",
     "    report(estimator.best_estimator_, mse, mae, r2)\n",
-    "\n",
-    "\n",
     "check_estimator()"
    ]
   },
@@ -273,8 +264,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\arist\\Documents\\Universidad\\Semestre 9\\Fudamentos de analitica\\2024-2-PRE-22-selectkbest-para-regresion-Pedro19ar\\.venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
       "c:\\Users\\arist\\Documents\\Universidad\\Semestre 9\\Fudamentos de analitica\\2024-2-PRE-22-selectkbest-para-regresion-Pedro19ar\\.venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n",
       "c:\\Users\\arist\\Documents\\Universidad\\Semestre 9\\Fudamentos de analitica\\2024-2-PRE-22-selectkbest-para-regresion-Pedro19ar\\.venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (30000) reached and the optimization hasn't converged yet.\n",
@@ -368,28 +357,33 @@
       "                                                  ['Origin'])])),\n",
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
-      "                             score_func=<function f_regression at 0x00000213B5BE1C60>)),\n",
+      "                             score_func=<function f_regression at 0x000002795B701BC0>)),\n",
       "                ('estimator',\n",
       "                 MLPRegressor(hidden_layer_sizes=(9,), learning_rate_init=0.01,\n",
       "                              max_iter=30000))]):\n",
-      "  MSE: 8.09342890404429\n",
-      "  MAE: 2.114464004657501\n",
-      "   R2: 0.861638701169762\n"
+      "  MSE: 8.196097673791149\n",
+      "  MAE: 2.01489729517881\n",
+      "   R2: 0.8598835261382769\n"
      ]
     }
    ],
    "source": [
     "def train_mlp_regressor():\n",
+    "\n",
     "    from sklearn.neural_network import MLPRegressor\n",
     "    from sklearn.metrics import mean_absolute_error\n",
+    "\n",
     "    data, target = load_data()\n",
+    "\n",
     "    x_train, x_test, y_train, y_test = make_train_test_split(\n",
     "        x=data,\n",
     "        y=target,\n",
     "    )\n",
+    "\n",
     "    pipeline = make_pipeline(\n",
     "        estimator=MLPRegressor(max_iter=30000),\n",
     "    )\n",
+    "\n",
     "    estimator = make_grid_search(\n",
     "        estimator=pipeline,\n",
     "        param_grid={\n",
@@ -400,18 +394,27 @@
     "        },\n",
     "        cv=5,\n",
     "    )\n",
+    "\n",
     "    estimator.fit(x_train, y_train)\n",
+    "\n",
     "    best_estimator = load_estimator()\n",
+    "\n",
     "    if best_estimator is not None:\n",
+    "\n",
     "        saved_mae = mean_absolute_error(\n",
     "            y_true=y_test, y_pred=best_estimator.predict(x_test)\n",
     "        )\n",
+    "\n",
     "        current_mae = mean_absolute_error(\n",
     "            y_true=y_test, y_pred=estimator.predict(x_test)\n",
     "        )\n",
+    "\n",
     "        if saved_mae < current_mae:\n",
     "            estimator = best_estimator\n",
+    "\n",
     "    save_estimator(estimator)\n",
+    "\n",
+    "\n",
     "train_mlp_regressor()\n",
     "check_estimator()"
    ]
